Optimizations and improvements on templates and getMemberById

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -685,7 +685,7 @@ border-color: #34495E;
 .bubble.left .arrow:after { border-left-color: transparent; }
 
 #box_stats {
-  .bubble-content { padding: 5px 12px; text-align: center; }
+  .bubble-content { padding: 5px 12px; text-align: center; height: 18px }
   .bubble {
     background-color: #344961;
     color: white;
