Improve API and specially its tests. Finished editacl view and related angularjs. Angularize alerts, dialogs for old interactions. Fix omega13 views. New i18n. Improve profile pt and button.

--- a/ulearn/theme/scss/_overrides.scss
+++ b/ulearn/theme/scss/_overrides.scss
@@ -27,7 +27,7 @@ h1, h2, h3, label, span.label {
 
 // #portal-column-content {background-color: white;}
 
-#portlet-prefs, .documentEditable,
+#portlet-prefs, .content_edit, .documentEditable,
 .template-overview-controlpanel #content {
      padding: 10px;
      background-color: white;
