New views for all communities

--- a/ulearn/theme/scss/_overrides.scss
+++ b/ulearn/theme/scss/_overrides.scss
@@ -26,6 +26,9 @@ h1, h2, h3, label, span.label {
 }
 
 // #portal-column-content {background-color: white;}
+.template-homepage .content_edit {
+  background-color: inherit;
+}
 
 #portlet-prefs, .content_edit, .documentEditable,
 .template-overview-controlpanel #content {
