--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -3622,50 +3622,19 @@ label[for="form.ext_editor"] ~ div.widget {
   left: -10px !important;
   top: 16px !important; }
 
-<<<<<<< HEAD
 .portaltype-objectius li > a#plone-contentmenu-workflow {
   display: block; }
 
-
-#maxui-container .maxui-body {
-    font-family: open sans;
-    margin: 2px 0 0;
-    font-weight: 600;
-}
-
-#maxui-container .maxui-body > a {
-    font-family: open sans;
-    margin: 2px 0 0;
-    font-weight: normal;
-}
-
-<<<<<<< HEAD
-.maxui-origin.maxui-icon- > a {
-    background: none repeat scroll 0 0 #ddd;
-    border-radius: 4px;
-    color: #444 !important;
-    padding-left: 8px;
-    padding-right: 8px;
-    text-shadow: none;
-}
-
-
-=======
 #box_comunitats .fa-stack {
   height: 1em;
   margin-top: -10px;
-  color: white;
-}
-<<<<<<< HEAD
->>>>>>> new branch portlet comunitats
-=======
+  color: white; }
 
-#searchinputusers .inputsearchUsers .searchInput{
+#searchinputusers .inputsearchUsers .searchInput {
   width: 190px;
-  margin-bottom: 0px;
-}
+  margin-bottom: 0px; }
 
-#searchinputusers .inputsearchUsers .add-on{
+#searchinputusers .inputsearchUsers .add-on {
   color: #888888;
   background-color: white;
   border: none;
@@ -3674,45 +3643,33 @@ label[for="form.ext_editor"] ~ div.widget {
   right: 25px;
   top: -2px;
   z-index: 10;
-  padding: 1px;
-}
+  padding: 1px; }
 
 #box_thinkers #searchinputusers {
-  width: 210px !important;
-}
+  width: 210px !important; }
 
-.inputsearchUsers button{
+.inputsearchUsers button {
   padding-left: 5px;
   padding-right: 5px;
-  margin-left: -7px;
-}
+  margin-left: -7px; }
 
-.inputsearchUsers form{
-  margin-bottom: 0px;
-}
-<<<<<<< HEAD
->>>>>>> Afegir cerca al portlet de persones
-=======
+.inputsearchUsers form {
+  margin-bottom: 0px; }
 
 #Media-carousel .carousel-inner {
   overflow: hidden;
   padding-top: 0px;
   padding-bottom: 0px;
-  border-radius: 0px;
-}
+  border-radius: 0px; }
 
 #Media-carousel .carousel-caption {
-  padding: 0px;
-}
+  padding: 0px; }
 
 #portlet_media {
-  margin-top: 10px;
-  padding: 0px;
-}
+  padding: 0px; }
 
 #portlet_media h2 {
-  padding: 10px;
-}
+  padding: 10px; }
 
 #portlet_media .carousel-control {
   position: absolute;
@@ -3727,48 +3684,39 @@ label[for="form.ext_editor"] ~ div.widget {
   color: #6f6f6f !important;
   text-align: center;
   opacity: 0.5;
-  border: none;
-}
+  border: none; }
 
 #portlet_media .carousel-control.right {
   left: auto;
-  right: 15px;
-}
+  right: 15px; }
 
 #player {
   width: 100%;
   height: auto;
-  min-height: 450px;
-}
+  min-height: 450px; }
 
 #portlet_media #player {
-  min-height: 220px;
-}
+  min-height: 220px; }
 
 .description_video {
   background-color: #585858;
   color: white;
   padding: 5px;
-  height: 26px;
-}
+  height: 26px; }
 
 .carousel-image img {
   width: 100%;
   height: auto;
-  max-height: 220px;
-}
+  max-height: 220px; }
 
 .carousel-audio .jwplayer {
-  max-height: 220px;
-}
+  max-height: 220px; }
 
-#portlet_media  .carousel .active > img, .carousel .selected > img {
--webkit-border-radius: 0;
--moz-border-radius: 0;
-border-radius: 0;
-}
->>>>>>> Renderitzador carrousel youtube queryportlet
-=======
+#portlet_media .carousel .active > img, .carousel .selected > img {
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0; }
+
 .changeCommunityType .selected {
   border-radius: 4px;
   border: 2px solid #999; }
@@ -3794,4 +3742,3 @@ border-radius: 0;
 
 .user_group {
   margin-bottom: 10px; }
->>>>>>> Improve API and specially its tests. Finished editacl view and related angularjs. Angularize alerts, dialogs for old interactions. Fix omega13 views. New i18n. Improve profile pt and button.
