Icon private folder

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1527,3 +1527,11 @@ border-radius: 0;
 }
 
 .text-center { text-align: center; }
+
+.icon-privatefolder {
+  background-position: -120px -120px;
+}
+
+.icon-ulearn-video_embed {
+  background-position: -192px 0px;
+}
