--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -3838,3 +3838,11 @@ label[for="form.ext_editor"] ~ div.widget {
 
 .text-center {
   text-align: center; }
+
+.icon-privatefolder {
+  background-position: -120px -120px;
+}
+
+.icon-ulearn-video_embed {
+  background-position: -192px 0px;
+}
