--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -3840,9 +3840,7 @@ label[for="form.ext_editor"] ~ div.widget {
   text-align: center; }
 
 .icon-privatefolder {
-  background-position: -120px -120px;
-}
+  background-position: -120px -120px; }
 
 .icon-ulearn-video_embed {
-  background-position: -192px 0px;
-}
+  background-position: -192px 0px; }
