--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1535,3 +1535,9 @@ border-radius: 0;
 .icon-ulearn-video_embed {
   background-position: -192px 0px;
 }
+
+#listing-table a.contenttype-privatefolder:before, .template-folder_tabular_view .listing a.contenttype-privatefolder:before, .contenttreeWidget > .navTree a.contenttype-privatefolder:before {
+  background-position: -120px -120px; }
+
+#listing-table a.contenttype-ulearn-video_embed:before, .template-folder_tabular_view .listing a.contenttype-ulearn-video_embed:before, .contenttreeWidget > .navTree a.contenttype-ulearn-video_embed:before {
+  background-position: -192px 0px; }
