Canvi color estats

--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1541,3 +1541,7 @@ border-radius: 0;
 
 #listing-table a.contenttype-ulearn-video_embed:before, .template-folder_tabular_view .listing a.contenttype-ulearn-video_embed:before, .contenttreeWidget > .navTree a.contenttype-ulearn-video_embed:before {
   background-position: -192px 0px; }
+
+#plone-contentmenu-workflow .label.default {
+   color: white;
+}
