--- a/ulearn/theme/scss/ulearn.scss
+++ b/ulearn/theme/scss/ulearn.scss
@@ -1567,3 +1567,8 @@ border-radius: 0;
 #plone-contentmenu-workflow .label.default {
    color: white;
 }
+
+.searchbytagcontainer ul.select2-choices {
+  list-style: none;
+  margin: 0;
+}
