--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -3869,12 +3869,9 @@ label[for="form.ext_editor"] ~ div.widget {
 #listing-table a.contenttype-ulearn-video_embed:before, .template-folder_tabular_view .listing a.contenttype-ulearn-video_embed:before, .contenttreeWidget > .navTree a.contenttype-ulearn-video_embed:before {
   background-position: -192px 0px; }
 
-<<<<<<< HEAD
-.searchbytagcontainer ul.select2-choices {
-  list-style: none;
-  margin: 0;
-}
-=======
 #plone-contentmenu-workflow .label.default {
   color: white; }
->>>>>>> Add missing css
+
+.searchbytagcontainer ul.select2-choices {
+  list-style: none;
+  margin: 0; }
