--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -3875,3 +3875,7 @@ label[for="form.ext_editor"] ~ div.widget {
 .searchbytagcontainer ul.select2-choices {
   list-style: none;
   margin: 0; }
+
+#userlist .queryable a img {
+  display: none;
+}
