Finished external resource with config.json based method

--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -1797,7 +1797,7 @@
   #portal-header h1.pull-left {
     height: auto;
     width: auto;
-    background: url("../portal_skins/ulearn_comunitats@2x.png") no-repeat;
+    background: url("../ulearn_comunitats@2x.png") no-repeat;
     -webkit-background-size: 100%;
     -moz-background-size: 100%;
     -o-background-size: 100%;
