--- a/ulearn/theme/stylesheets/ulearn.css
+++ b/ulearn/theme/stylesheets/ulearn.css
@@ -1,4 +1,4 @@
-/*!
+/*
  *  Font Awesome 4.3.0 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
  */
@@ -22,7 +22,7 @@
 
 /* makes the font 33% larger relative to the icon container */
 .fa-lg {
-  font-size: 1.33333em;
+  font-size: 1.333em;
   line-height: 0.75em;
   vertical-align: -15%; }
 
@@ -39,24 +39,24 @@
   font-size: 5em; }
 
 .fa-fw {
-  width: 1.28571em;
+  width: 1.286em;
   text-align: center; }
 
 .fa-ul {
   padding-left: 0;
-  margin-left: 2.14286em;
+  margin-left: 2.143em;
   list-style-type: none; }
   .fa-ul > li {
     position: relative; }
 
 .fa-li {
   position: absolute;
-  left: -2.14286em;
-  width: 2.14286em;
-  top: 0.14286em;
+  left: -2.143em;
+  width: 2.143em;
+  top: 0.143em;
   text-align: center; }
   .fa-li.fa-lg {
-    left: -1.85714em; }
+    left: -1.857em; }
 
 .fa-border {
   padding: .2em .25em .15em;
@@ -1793,7 +1793,7 @@
 .fa-medium:before {
   content: "\f23a"; }
 
-@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (min-device-pixel-ratio: 2), only screen and (min-resolution: 192dpi), only screen and (min-resolution: 2dppx) {
+@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (   min--moz-device-pixel-ratio: 2), only screen and (     -o-min-device-pixel-ratio: 2/1), only screen and (        min-device-pixel-ratio: 2), only screen and (                min-resolution: 192dpi), only screen and (                min-resolution: 2dppx) {
   #portal-header h1.pull-left {
     height: auto;
     width: auto;
@@ -2007,7 +2007,7 @@ li > .noMenuAction {
   background-image: -webkit-gradient(linear, 0 0, 0 100%, from(white), to(#dddddd));
   background-image: -webkit-linear-gradient(top, white, #dddddd);
   background-image: -o-linear-gradient(top, white, #dddddd);
-  background-image: linear-gradient(to bottom, #ffffff, #dddddd);
+  background-image: linear-gradient(to bottom, white, #dddddd);
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcfcfc', endColorstr='#dadada', GradientType=0);
   -webkit-box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.4);
@@ -2266,7 +2266,7 @@ li > .noMenuAction {
   background-image: -moz-linear-gradient(top, white, #e6e6e6);
   background-image: -ms-linear-gradient(top, white, #e6e6e6);
   background-image: -o-linear-gradient(top, white, #e6e6e6);
-  background-image: linear-gradient(top, #ffffff, #e6e6e6); }
+  background-image: linear-gradient(top, white, #e6e6e6); }
 
 .alertify-button-cancel:hover,
 .alertify-button-cancel:focus,
@@ -2568,7 +2568,7 @@ li > .noMenuAction {
 
 @media only screen and (max-width: 768px) {
   #portlet-prefs, .documentEditable, .template-overview-controlpanel #content {
-    padding: 10px !important; }
+    padding: 10px!important; }
 
   .userrole-manager .template-proposalslist .idea:first-child {
     padding-top: 100px; }
@@ -2856,7 +2856,7 @@ input[type="text"]:focus {
   padding: 10px;
   clear: both;
   margin-bottom: 20px;
-  box-shadow: -1px 1px 2px #ddd; }
+  box-shadow: -1px 1px 2px #dddddd; }
   .ulearnbox ul:last-child,
   .ulearnbox p:last-child {
     margin-bottom: 0px; }
@@ -3727,7 +3727,7 @@ label[for="form.ext_editor"] ~ div.widget {
     display: none; }
 
   nav#portal-personaltools-wrapper {
-    margin-top: 0px !important; }
+    margin-top: 0px!important; }
 
   #portal-header {
     background: none repeat scroll 0 0 #f58d3d; }
@@ -4115,3 +4115,11 @@ label[for="form.ext_editor"] ~ div.widget {
 
 #userlist .queryable a img {
   display: none; }
+
+#box_comunitats .bubble.right {
+  margin-left: 0px; }
+
+#title_community {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis; }
