--- a/ulearn/theme/scss/_login.scss
+++ b/ulearn/theme/scss/_login.scss
@@ -8,7 +8,7 @@
 .loginbox {
     margin-left: auto;
     margin-right: auto;
-    width: 400px;
+    width: 420px;
     background-color: #eee;
     @include gradient-vertical(#FFFFFF, #DDDDDD);
     @include box-shadow(1px 1px 4px rgba(0, 0, 0, 0.4));
@@ -17,7 +17,37 @@
     border-bottom: 1px solid #CCCCCC;
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
-    padding: 20px;
+    padding: 30px 25px;
+    .loginlogo {
+    text-align: center; 
+    margin-bottom: 20px;
+    max-width: 405px;
+    }
+  .control-label {
+    color: #444;
+    font-weight: 600;
+  }
+  .btn.btn-primary {
+  width: 93%;
+  }
+  #login-forgotten-password {
+    color: #666;
+    font-size: 12px;
+    margin-top: 10px;
+    text-align: center;
+  }
+  #inputEmail {
+    width: 88%;
+  }
+  #inputPassword {
+    width: 88%;
+  }
+  input[type="text"] {
+    border-color: #ccc;
+  }
 }
-
-.loginlogo {text-align: center; margin-bottom: 20px;}
+@media only screen and (max-width: 480px) {
+  html {
+   min-height: 515px;
+  }
+}
